Add skeleton API classes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,38 @@
 annotated-types==0.6.0
+anyio==4.4.0
+argcomplete==3.5.0
+black==24.8.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+datamodel-code-generator==0.26.0
+dnspython==2.6.1
+email_validator==2.2.0
+genson==1.3.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
+idna==3.8
+inflect==5.6.2
 install-jdk==1.1.0
+isort==5.13.2
+Jinja2==3.1.4
 JPype1==1.5.0
+MarkupSafe==2.1.5
+mypy-extensions==1.0.0
 numpy==2.1.1
 packaging==24.0
 pandas==2.2.2
+pathspec==0.12.1
+platformdirs==4.3.2
 pydantic==2.6.4
 pydantic_core==2.16.3
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.2
+requests==2.32.3
 six==1.16.0
+sniffio==1.3.1
 typing_extensions==4.10.0
 tzdata==2024.1
+urllib3==2.2.2
