--- a/requirements.txt
+++ b/requirements.txt
@@ -14,17 +14,18 @@ httpcore==1.0.5
 httpx==0.27.2
 idna==3.8
 inflect==5.6.2
+iniconfig==2.0.0
 install-jdk==1.1.0
 isort==5.13.2
 Jinja2==3.1.4
 JPype1==1.5.0
 MarkupSafe==2.1.5
 mypy-extensions==1.0.0
-numpy==2.1.1
 packaging==24.0
 pandas==2.2.2
 pathspec==0.12.1
 platformdirs==4.3.2
+pluggy==1.5.0
 pydantic==2.6.4
 pydantic_core==2.16.3
 python-dateutil==2.9.0.post0
