--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,7 @@ dependencies = [
   "install-jdk==1.1.0",
   "JPype1==1.5.0",
   "requests==2.32.3",
-  "pydantic==2.6.4",
-  "pydantic_core==2.16.3",
-  "typing_extensions==4.10.0"
+  "pydantic==2.10.5"
 ]
 
 [project.urls]
