--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
   "install-jdk==1.1.0",
   "JPype1==1.5.0",
   "requests==2.32.3",
-  "pydantic==2.10.5"
+  "pydantic==2.10.5",
+  "tqdm==4.67.1",
 ]
 
 [project.urls]
