--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,70 @@
-annotated-types==0.6.0
+annotated-types==0.7.0
 anyio==4.4.0
+appnope==0.1.4
 argcomplete==3.5.0
+asttokens==2.4.1
 black==24.8.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+comm==0.2.2
 datamodel-code-generator==0.26.0
+debugpy==1.8.6
+decorator==5.1.1
 dnspython==2.6.1
 email_validator==2.2.0
+executing==2.1.0
+flake8==7.1.1
 genson==1.3.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
-idna==3.8
+idna==3.10
 inflect==5.6.2
 iniconfig==2.0.0
 install-jdk==1.1.0
+ipykernel==6.29.5
+ipython==8.28.0
 isort==5.13.2
+jedi==0.19.1
 Jinja2==3.1.4
 JPype1==1.5.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mccabe==0.7.0
 mypy-extensions==1.0.0
-packaging==24.0
+nest-asyncio==1.6.0
+packaging==24.1
 pandas==2.2.2
+parso==0.8.4
 pathspec==0.12.1
+pdoc==15.0.1
+pexpect==4.9.0
 platformdirs==4.3.2
 pluggy==1.5.0
+prompt_toolkit==3.0.48
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycodestyle==2.12.1
 pydantic==2.6.4
 pydantic_core==2.16.3
+pyflakes==3.2.0
+Pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.2
+pyzmq==26.2.0
 requests==2.32.3
 six==1.16.0
 sniffio==1.3.1
+stack-data==0.6.3
+tornado==6.4.1
+tqdm==4.67.1
+traitlets==5.14.3
 typing_extensions==4.10.0
 tzdata==2024.1
-urllib3==2.2.2
+urllib3==2.2.3
+wcwidth==0.2.13
