--- a/requirements.txt
+++ b/requirements.txt
@@ -31,9 +31,12 @@ Jinja2==3.1.4
 JPype1==1.5.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+markdown-it-py==3.0.0
+markdown-table-generator==1.1.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+mdurl==0.1.2
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 packaging==24.1
@@ -48,6 +51,7 @@ prompt_toolkit==3.0.48
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+py-markdown-table==1.2.0
 pycodestyle==2.12.1
 pydantic==2.6.4
 pydantic_core==2.16.3
@@ -58,12 +62,14 @@ pytz==2024.1
 PyYAML==6.0.2
 pyzmq==26.2.0
 requests==2.32.3
+rich==13.9.4
 six==1.16.0
 sniffio==1.3.1
 stack-data==0.6.3
 tornado==6.4.1
 tqdm==4.67.1
 traitlets==5.14.3
+typing==3.7.4.3
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.3
