First test, then create docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,9 +5,10 @@ on:
   push:
     branches:
       - main
-    # Alternative: only build for tags.
-    # tags:
-    #   - '*'
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
 
 # security: restrict permissions for CI jobs.
 permissions:
